# relay_server

./: .gitignore  Makefile  README.md
3rd/: Makefile
3rd/libuv/: .gitignore  libuv.vcxproj  run-benchmarks.vcxproj  run-tests.vcxproj  vcbuild.bat
ide/: relay_server_sdk.sln
lib/: libcurl.lib  libuv.lib
src/: CMakeLists.txt  Makefile
src/client_network/: README.md  client_network.vcxproj  client_network.vcxproj.filters  client_thread_msg.h  network_module.cpp  network_module.h  network_module_export.h  tcp_module.cpp  tcp_module.h  timer_module.cpp  timer_module.h  udp_module.cpp  udp_module.h
src/relay_server_main/: CMakeLists.txt  main.cpp  relay_server.h  relay_server_main.vcxproj  relay_server_main.vcxproj.filters
src/relay_server_master/: Makefile  main.cpp  master.cpp  master.h  relay_server_master.vcxproj  relay_server_master.vcxproj.filters
src/relay_server_sdk/: CMakeLists.txt  README.md  client_tcpserver_msg.h  client_udpserver_msg.h  media_server.cpp  media_server.h  relay_server.cpp  relay_server.h  relay_server_sdk.vcxproj  relay_server_sdk.vcxproj.filters  signaling_server.cpp  signaling_server.h  slave.cpp  slave.h
src/simple_uv/: BaseMsgDefine.cpp  BaseMsgDefine.h  CMakeLists.txt  DumpFile.h  LogMng.cpp  LogMng.h  PacketSync.cpp  PacketSync.h  PodCircularBuffer.h  SimpleLocks.h  SimpleUVExport.h  TcpHandle.cpp  TcpHandle.h  ThreadMsgBase.cpp  ThreadMsgBase.h  UDPClient.cpp  UDPClient.h  UDPHandle.cpp  UDPHandle.h  UDPServer.cpp  UDPServer.h  UVMsgFraming.cpp  UVMsgFraming.h  UVThread.cpp  UVThread.h  UVThreadMng.cpp  UVThreadMng.h  UdpPacket.h  common.cpp  common.h  config.cpp  config.h  get_sys_info.cpp  log4z.h  md5.cpp  md5.h  net_base.h  simple_uv.vcxproj  simple_uv.vcxproj.filters  tcpclient.cpp  (+3 more)
